Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17272

Inconsistent proposed file systems for Format Drive dialog

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None

    Description

      Inconsistent proposed file systems for Format Drive dialog
      0.4.15-dev-707-g3745dad

      When formatting a drive, QueryAvailableFileSystemFormat returns FS that are then not supported by InsertDefaultClusterSizeForFs.

      As a consequence, FATX gets listed but when selecting it, cluster size gets blank and log shows :

      fixme:(dll/win32/shell32/dialogs/drive.cpp:332) unknown fs
      

      Attachments

        Issue Links

          Activity

            People

              Fraizeraust George Bișoc
              Kyle_Katarn Kyle_Katarn
              Votes:
              2 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: